# sonora-flute

./: .gitignore  .vercelignore  DEPLOYMENT.md  DEPLOY_NOW.md  Dockerfile  EXACT_VERCEL_STEPS.md  GITHUB_PUSH_GUIDE.md  Procfile  README.md  SIMPLE_DEPLOY.md  UI_GUIDE.md  VERCEL_DEPLOY.md  app_test.py  pyproject.toml  pyproject.toml.bak  render.yaml  requirements.txt  setup.py  vercel.json  wsgi.py
.github/workflows/: deploy.yml
api/: index.py
src/: app.py
src/api/: routes.py
src/audio/: pitch_tracking.py  preprocessing.py
src/models/: inference.py  scale_classifier.py
src/static/css/: style.backup.css  style.css
src/static/js/: ambient.js  app.js  home.js  interactive.js
src/templates/: base.html  home.html  index.html
src/templates/about/: types_of_flutes.html
src/templates/learn/: audio.html  fingering.html  get_skilled.html  indian_scales.html  scales.html  upskill.html  videos.html  western_scales.html
src/templates/pages/: about.html  contact.html  faq.html
src/templates/user/: history.html  leaderboard.html  profile.html
src/types/: index.py
src/video/: fingering_detection.py  preprocessing.py
tests/: test_scale_classifier.py
