[project]
name = "flute-scale-detector"
version = "0.1.0"
description = "An application to identify the scale being played on a flute using audio and video input."
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "Flask==2.3.3",
    "gunicorn==21.2.0",
    "numpy>=2.0",
    "scipy>=1.10",
    "librosa>=0.10",
    "opencv-python>=4.5",
    "tensorflow>=2.13",
    "pydub>=0.25",
    "soundfile>=0.12",
    "pytest>=7.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"